fixtures/frontend/milestone-1/invalid/gate_non_list.aivi
type User = { active: Bool }

value currentUser:User = { active: True }

value activeUser =
    currentUser
     ?|> .active
